--- a/src/component/Courses/Courses.css
+++ b/src/component/Courses/Courses.css
@@ -1,6 +1,12 @@
-.course-container{
+/* .course-container{
     display: grid;
     grid-template-columns: 1fr 3fr;
     gap: 40px;
     margin-top: 30px;
 }
+@media screen and (min-width:767) {
+    .course-container {
+            grid-template-columns: 1fr;
+            
+        }
+} */
